ThreadGet use pool for non close http connections

--- a/cfg/jul.properties
+++ b/cfg/jul.properties
@@ -8,5 +8,5 @@ java.util.logging.FileHandler.limit=10000000
 java.util.logging.FileHandler.count=20
 java.util.logging.FileHandler.pattern=out\\kbemp_%u.%g.log
 
-java.util.logging.ConsoleHandler.level=INFO
+java.util.logging.ConsoleHandler.level=SEVERE
 java.util.logging.ConsoleHandler.encoding=Cp866
